@@ -1,3 +1,8 @@
+2016-08-29  Tom de Vries  <tom@codesourcery.com>
+
+	PR c/77398
+	* g++.dg/ext/va-arg1.C: Add error check for illegal first argument.
+
 2016-08-29  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc.dg/ipa/iinline-attr.c: XFAIL on Visium.
